--- a/Algo.ipynb
+++ b/Algo.ipynb
@@ -67084,7 +67084,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.display.max_rows = 500\n",
+    "market_data = pd.read_csv(f'Prosperity25/data/round1/combined_prices_round_1.csv', sep=',', header=0)\n",
+    "market_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
