Added cointegration tests

--- a/analysis/round2anal.ipynb
+++ b/analysis/round2anal.ipynb
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "e1090cf6",
    "metadata": {},
    "outputs": [
@@ -1353,7 +1353,21 @@
       "ADF Test for PICNIC_BASKET2 Spread:\n",
       "Test Statistic: -2.7422083620078284\n",
       "p-value: 0.06701480341329635\n",
-      "Critical Values: {'1%': np.float64(-3.4305680243931267), '5%': np.float64(-2.861636360888007), '10%': np.float64(-2.5668212899601888)}\n"
+      "Critical Values: {'1%': np.float64(-3.4305680243931267), '5%': np.float64(-2.861636360888007), '10%': np.float64(-2.5668212899601888)}\n",
+      "\n",
+      "ADF Test for PICNIC_BASKET1:\n",
+      "Test Statistic: -0.8832890251707707\n",
+      "p-value: 0.7934257585902266\n",
+      "Critical Values: {'1%': np.float64(-3.43056803166244), '5%': np.float64(-2.861636364100729), '10%': np.float64(-2.566821291670243)}\n",
+      "\n",
+      "ADF Test for PICNIC_BASKET2:\n",
+      "Test Statistic: -0.7850019540183095\n",
+      "p-value: 0.8234879813568619\n",
+      "Critical Values: {'1%': np.float64(-3.43056803166244), '5%': np.float64(-2.861636364100729), '10%': np.float64(-2.566821291670243)}\n",
+      "Hurst Exponent for PICNIC_BASKET1 Spread: 0.9459\n",
+      "Hurst Exponent for PICNIC_BASKET2 Spread: 0.9404\n",
+      "Hurst Exponent for PICNIC_BASKET1: 0.9860\n",
+      "Hurst Exponent for PICNIC_BASKET2: 0.9932\n"
      ]
     }
    ],
@@ -1368,7 +1382,117 @@
     "print(\"\\nADF Test for PICNIC_BASKET2 Spread:\")\n",
     "print(f\"Test Statistic: {adf_result_basket2[0]}\")\n",
     "print(f\"p-value: {adf_result_basket2[1]}\")\n",
-    "print(f\"Critical Values: {adf_result_basket2[4]}\")"
+    "print(f\"Critical Values: {adf_result_basket2[4]}\")\n",
+    "\n",
+    "adf_basket1 = adfuller(df_prices['Basket1'].dropna())\n",
+    "adf_basket2 = adfuller(df_prices['Basket2'].dropna())\n",
+    "print(\"\\nADF Test for PICNIC_BASKET1:\")\n",
+    "print(f\"Test Statistic: {adf_basket1[0]}\")\n",
+    "print(f\"p-value: {adf_basket1[1]}\")\n",
+    "print(f\"Critical Values: {adf_basket1[4]}\")\n",
+    "print(\"\\nADF Test for PICNIC_BASKET2:\")\n",
+    "print(f\"Test Statistic: {adf_basket2[0]}\")\n",
+    "print(f\"p-value: {adf_basket2[1]}\")\n",
+    "print(f\"Critical Values: {adf_basket2[4]}\")\n",
+    "\n",
+    "# Hurst exponent for the spread\n",
+    "hurst_basket1 = hurst_exponent(df_prices['Spread_Basket1'].dropna().values)\n",
+    "hurst_basket2 = hurst_exponent(df_prices['Spread_Basket2'].dropna().values)\n",
+    "print(f\"Hurst Exponent for PICNIC_BASKET1 Spread: {hurst_basket1:.4f}\")\n",
+    "print(f\"Hurst Exponent for PICNIC_BASKET2 Spread: {hurst_basket2:.4f}\")\n",
+    "# Hurst exponent for the baskets\n",
+    "hurst_basket1 = hurst_exponent(df_prices['Basket1'].dropna().values)\n",
+    "hurst_basket2 = hurst_exponent(df_prices['Basket2'].dropna().values)\n",
+    "print(f\"Hurst Exponent for PICNIC_BASKET1: {hurst_basket1:.4f}\")\n",
+    "print(f\"Hurst Exponent for PICNIC_BASKET2: {hurst_basket2:.4f}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e8d119fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OLS Regression Results:\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                Basket1   R-squared:                       0.914\n",
+      "Model:                            OLS   Adj. R-squared:                  0.914\n",
+      "Method:                 Least Squares   F-statistic:                 3.179e+05\n",
+      "Date:                Sat, 12 Apr 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        14:34:33   Log-Likelihood:            -1.8269e+05\n",
+      "No. Observations:               30000   AIC:                         3.654e+05\n",
+      "Df Residuals:                   29998   BIC:                         3.654e+05\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const       9878.0788     87.211    113.267      0.000    9707.142       1e+04\n",
+      "Basket2        1.6171      0.003    563.866      0.000       1.612       1.623\n",
+      "==============================================================================\n",
+      "Omnibus:                     1888.817   Durbin-Watson:                   0.002\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             1010.766\n",
+      "Skew:                          -0.291   Prob(JB):                    3.27e-220\n",
+      "Kurtosis:                       2.314   Cond. No.                     4.30e+06\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 4.3e+06. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n",
+      "\n",
+      "ADF Test on Residuals (Cointegration Test):\n",
+      "Test Statistic: -3.5039578750064218\n",
+      "p-value: 0.007886027351008153\n",
+      "Critical Values: {'1%': np.float64(-3.430568009855954), '5%': np.float64(-2.8616363544632057), '10%': np.float64(-2.566821286540422)}\n",
+      "\n",
+      "Engle-Granger Cointegration Test (statsmodels.coint):\n",
+      "Cointegration test p-value: 0.032039806752835076\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.tsa.stattools import coint\n",
+    "\n",
+    "basket1 = df_prices['Basket1'].dropna()\n",
+    "basket2 = df_prices['Basket2'].dropna()\n",
+    "\n",
+    "\n",
+    "combined = pd.concat([basket1, basket2], axis=1).dropna()\n",
+    "combined.columns = ['Basket1', 'Basket2']\n",
+    "\n",
+    "# --- Step 2: Regress Basket1 on Basket2 using OLS ---\n",
+    "# Add constant term for the intercept.\n",
+    "X = sm.add_constant(combined['Basket2'])\n",
+    "model = sm.OLS(combined['Basket1'], X).fit()\n",
+    "residuals = model.resid\n",
+    "\n",
+    "print(\"OLS Regression Results:\")\n",
+    "print(model.summary())\n",
+    "\n",
+    "# --- Step 3: Run ADF Test on Residuals ---\n",
+    "adf_resid = adfuller(residuals)\n",
+    "print(\"\\nADF Test on Residuals (Cointegration Test):\")\n",
+    "print(f\"Test Statistic: {adf_resid[0]}\")\n",
+    "print(f\"p-value: {adf_resid[1]}\")\n",
+    "print(f\"Critical Values: {adf_resid[4]}\")\n",
+    "\n",
+    "# If the p-value is low (< 0.05), then the residuals are stationary, implying cointegration.\n",
+    "\n",
+    "# Alternatively, run the built-in cointegration test:\n",
+    "score, pvalue, _ = coint(combined['Basket1'], combined['Basket2'])\n",
+    "print(\"\\nEngle-Granger Cointegration Test (statsmodels.coint):\")\n",
+    "print(f\"Cointegration test p-value: {pvalue}\")\n",
+    "\n",
+    "# Interpretation:\n",
+    "# If the p-value from either the ADF test on residuals or the coint function is below your significance threshold,\n",
+    "# then you can conclude that the baskets are cointegrated (i.e. their linear combination is I(0)).\n"
    ]
   },
   {
