--- a/Manual.ipynb
+++ b/Manual.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,15 @@
     "from statsmodels.graphics.tsaplots import plot_acf\n",
     "from scipy.signal import periodogram, find_peaks\n",
     "import itertools\n",
-    "from scipy.optimize import minimize, Bounds, LinearConstraint"
+    "from scipy.optimize import minimize, Bounds, LinearConstraint\n",
+    "from joblib import Parallel, delayed\n",
+    "import os\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -149,12 +152,17 @@
     "\n",
     "B = 10000 \n",
     "F = 50000\n",
-    "N_choices = 2500"
+    "N_players = 2500\n",
+    "N_players_sim = 10000\n",
+    "rational_prob = 0.3 # 70% rational players\n",
+    "num_sims = 100000000\n",
+    "n_jobs = -1 \n",
+    "num_containers = len(containers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +188,7 @@
     "    inhabitants = arr_containers[i, 1]\n",
     "    \n",
     "    numerator = (multiplier * B) - (F * inhabitants)\n",
-    "    denominator = N_choices * F\n",
+    "    denominator = N_players * F\n",
     "    \n",
     "    max_pk_for_profit = max(0, numerator / denominator) \n",
     "    p_threshold[i] = max_pk_for_profit\n",
@@ -190,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +262,7 @@
     "        # Calculate the maximin profit for this pair\n",
     "        current_min_profit = (min_summed_ratio * B) - F \n",
     "        \n",
-    "        # Update tracker for the overall maximum maximin profit\n",
+    "        # Update tracker for the overall maximin profit\n",
     "        current_pair_tuple = tuple(sorted([(m1, i1), (m2, i2)]))\n",
     "        if math.isclose(current_min_profit, max_min_profit):\n",
     "             if current_pair_tuple not in {tuple(p) for p in best_pairs}:\n",
@@ -265,63 +273,12 @@
     "            \n",
     "    final_best_pairs = [tuple(pair) for pair in best_pairs]\n",
     "    if max_min_profit == -float('inf'): return [], -float('inf') \n",
-    "    return final_best_pairs, max_min_profit\n",
-    "\n",
-    "# def maximin_2(container_array, B, F):\n",
-    "#     \"\"\"\n",
-    "#     Solves the maximin optimization problem for choosing TWO containers,\n",
-    "#     using the SHARE-BASED payoff model V = M*B / (I + 100*p).\n",
-    "#     Assumes the worst case is p1=0,p2=1 OR p1=1,p2=0.\n",
-    "#     Simplified version without error handling.\n",
-    "#     \"\"\"\n",
-    "#     max_profit = -float('inf') \n",
-    "#     best_pairs = [] \n",
-    "    \n",
-    "#     # Ensure data is iterable (works for list of tuples or numpy array)\n",
-    "#     data_iterable = container_array\n",
-    "#     if isinstance(container_array, np.ndarray):\n",
-    "#          data_iterable = [tuple(row) for row in container_array]\n",
-    "\n",
-    "#     # Iterate through all unique pairs of containers\n",
-    "#     for (m1, i1), (m2, i2) in itertools.combinations(data_iterable, 2):\n",
-    "        \n",
-    "#         # Assume inhabitants i1, i2 are >= 1 based on container data\n",
-    "        \n",
-    "#         # Calculate the summed ratios for the two extreme adversarial allocations\n",
-    "#         # Case A: Adversary sets p1=0, p2=1 (maximizes denominator for container 2)\n",
-    "#         # Profit ratio component from C1 is M1/I1, from C2 is M2/(I2+100)\n",
-    "#         ratio_A = (m1 / i1) + (m2 / (i2 + 100)) \n",
-    "        \n",
-    "#         # Case B: Adversary sets p1=1, p2=0 (maximizes denominator for container 1)\n",
-    "#         # Profit ratio component from C1 is M1/(I1+100), from C2 is M2/I2\n",
-    "#         ratio_B = (m1 / (i1 + 100)) + (m2 / i2) \n",
-    "        \n",
-    "#         # Adversary chooses the case that minimizes the combined payoff ratio\n",
-    "#         min_summed_ratio = min(ratio_A, ratio_B)\n",
-    "        \n",
-    "#         # Calculate the total profit for this pair in the worst case, including fee\n",
-    "#         profit = (min_summed_ratio * B) - F \n",
-    "        \n",
-    "#         # Update max profit and best pair(s)\n",
-    "#         # Use tuples for comparison/storage, sort pair for consistency\n",
-    "#         current_pair_tuple = tuple(sorted([(m1, i1), (m2, i2)])) \n",
-    "#         if math.isclose(profit, max_profit):\n",
-    "#              # Simple append, ignore rare duplicate possibility for brevity\n",
-    "#              if current_pair_tuple not in {tuple(sorted(p)) for p in best_pairs}:\n",
-    "#                  best_pairs.append(list(current_pair_tuple))\n",
-    "#         elif profit > max_profit:\n",
-    "#             best_pairs = [list(current_pair_tuple)] \n",
-    "#             max_profit = profit\n",
-    "            \n",
-    "#     # Convert inner lists back to tuples for standard output format\n",
-    "#     final_best_pairs = [tuple(pair) for pair in best_pairs]\n",
-    "    \n",
-    "#     return final_best_pairs, max_profit"
+    "    return final_best_pairs, max_min_profit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
