exported the df as well

--- a/analysis/round3anal.ipynb
+++ b/analysis/round3anal.ipynb
@@ -1167,6 +1167,34 @@
     "\n",
     "print(\"\\nFinished generating spread plots.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame successfully exported to volcanic_options_analysis_r3.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "output_filename = 'volcanic_options_analysis_r3.csv'\n",
+    "try:\n",
+    "\n",
+    "    # export all columns:\n",
+    "    df_plot_spread.to_csv(output_filename, index=False, sep=';') # Using ';' to match input format\n",
+    "    print(f\"DataFrame successfully exported to {output_filename}\")\n",
+    "\n",
+    "except NameError:\n",
+    "    print(\"Error: DataFrame 'df_plot_spread' not found. Ensure Cell 12 has been executed.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred during export: {e}\")"
+   ]
   }
  ],
  "metadata": {
