idk what this is

--- a/analysis/round3anal.ipynb
+++ b/analysis/round3anal.ipynb
@@ -1274,6 +1274,169 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating Mean/Median Historical IVs per Strike:\n",
+      "- VOLCANIC_ROCK_VOUCHER_9500 (9500): Mean=0.2177, Median=0.2198 -> Using: 0.2198 (17422 points)\n",
+      "- VOLCANIC_ROCK_VOUCHER_9750 (9750): Mean=0.1713, Median=0.1713 -> Using: 0.1713 (27730 points)\n",
+      "- VOLCANIC_ROCK_VOUCHER_10000 (10000): Mean=0.1484, Median=0.1483 -> Using: 0.1483 (30000 points)\n",
+      "- VOLCANIC_ROCK_VOUCHER_10250 (10250): Mean=0.1389, Median=0.1388 -> Using: 0.1388 (30000 points)\n",
+      "- VOLCANIC_ROCK_VOUCHER_10500 (10500): Mean=0.1418, Median=0.1387 -> Using: 0.1387 (30000 points)\n",
+      "\n",
+      "Final Mean Volatilities for VOL_PARAMS:\n",
+      "{\n",
+      "    \"9500\": 0.2198403817048004,\n",
+      "    \"9750\": 0.17133007034691747,\n",
+      "    \"10000\": 0.14831599921483016,\n",
+      "    \"10250\": 0.13882687892352183,\n",
+      "    \"10500\": 0.13874963790882294\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "# --- Assume df_analysis is your DataFrame loaded from historical logs ---\n",
+    "# It should have columns like 'timestamp', 'product', 'Implied_Vol'\n",
+    "\n",
+    "voucher_products = [\n",
+    "    \"VOLCANIC_ROCK_VOUCHER_9500\",\n",
+    "    \"VOLCANIC_ROCK_VOUCHER_9750\",\n",
+    "    \"VOLCANIC_ROCK_VOUCHER_10000\",\n",
+    "    \"VOLCANIC_ROCK_VOUCHER_10250\",\n",
+    "    \"VOLCANIC_ROCK_VOUCHER_10500\",\n",
+    "]\n",
+    "\n",
+    "mean_volatilities = {}\n",
+    "min_valid_iv = 0.05 # Filter out unrealistic IVs\n",
+    "max_valid_iv = 2.0  # Filter out unrealistic IVs\n",
+    "\n",
+    "print(\"Calculating Mean/Median Historical IVs per Strike:\")\n",
+    "for product_name in voucher_products:\n",
+    "    # Extract strike number from product name for the key\n",
+    "    try:\n",
+    "        strike = int(product_name.split('_')[-1])\n",
+    "        strike_key = str(strike) # Use string key for consistency\n",
+    "    except ValueError:\n",
+    "        print(f\"Could not extract strike from {product_name}\")\n",
+    "        continue\n",
+    "\n",
+    "    # Filter data for this specific product\n",
+    "    df_strike = df_analysis[df_analysis['product'] == product_name].copy()\n",
+    "\n",
+    "    # Filter out NaNs and potential outliers\n",
+    "    valid_ivs = df_strike[\n",
+    "        df_strike['Implied_Vol'].notna() &\n",
+    "        (df_strike['Implied_Vol'] >= min_valid_iv) &\n",
+    "        (df_strike['Implied_Vol'] <= max_valid_iv)\n",
+    "    ]['Implied_Vol']\n",
+    "\n",
+    "    if not valid_ivs.empty:\n",
+    "        # Calculate mean or median\n",
+    "        mean_val = np.mean(valid_ivs)\n",
+    "        median_val = np.median(valid_ivs)\n",
+    "        # Choose mean or median - median is often better if outliers are suspected\n",
+    "        chosen_val = median_val\n",
+    "        mean_volatilities[strike_key] = chosen_val\n",
+    "        print(f\"- {product_name} ({strike_key}): Mean={mean_val:.4f}, Median={median_val:.4f} -> Using: {chosen_val:.4f} ({len(valid_ivs)} points)\")\n",
+    "    else:\n",
+    "        print(f\"- {product_name} ({strike_key}): No valid historical IV data found! Assigning default.\")\n",
+    "        mean_volatilities[strike_key] = 0.25 # Assign a reasonable default if no data\n",
+    "\n",
+    "print(\"\\nFinal Mean Volatilities for VOL_PARAMS:\")\n",
+    "print(json.dumps(mean_volatilities, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   day  timestamp                      product  bid_price_1  bid_volume_1  \\\n",
+      "0    0          0  VOLCANIC_ROCK_VOUCHER_10500         99.0          19.0   \n",
+      "1    0          0  VOLCANIC_ROCK_VOUCHER_10000        505.0          19.0   \n",
+      "2    0          0   VOLCANIC_ROCK_VOUCHER_9750        754.0          19.0   \n",
+      "3    0          0   VOLCANIC_ROCK_VOUCHER_9500       1003.0          19.0   \n",
+      "4    0          0  VOLCANIC_ROCK_VOUCHER_10250        273.0          19.0   \n",
+      "\n",
+      "   bid_price_2  bid_volume_2  bid_price_3  bid_volume_3  ask_price_1  ...  \\\n",
+      "0          NaN           NaN          NaN           NaN          100  ...   \n",
+      "1          NaN           NaN          NaN           NaN          506  ...   \n",
+      "2          NaN           NaN          NaN           NaN          755  ...   \n",
+      "3          NaN           NaN          NaN           NaN         1004  ...   \n",
+      "4          NaN           NaN          NaN           NaN          274  ...   \n",
+      "\n",
+      "   days_remaining  time_to_expiry_years  risk_free_rate  Implied_Vol  \\\n",
+      "0             7.0              0.027778             0.0     0.140344   \n",
+      "1             7.0              0.027778             0.0     0.150991   \n",
+      "2             7.0              0.027778             0.0     0.199911   \n",
+      "3             7.0              0.027778             0.0     0.228646   \n",
+      "4             7.0              0.027778             0.0     0.144913   \n",
+      "\n",
+      "      Delta     Gamma        Vega     Theta  underlying_mid_price       m_t  \n",
+      "0  0.509537  0.001623  698.148897 -4.831936               10503.0 -0.001714  \n",
+      "1  0.975161  0.000220  101.755235 -0.757685               10503.0 -0.294455  \n",
+      "2  0.987759  0.000091   55.627222 -0.548407               10503.0 -0.446362  \n",
+      "3  0.996010  0.000030   20.693255 -0.233330               10503.0 -0.602215  \n",
+      "4  0.846526  0.000933  414.402775 -2.961478               10503.0 -0.146299  \n",
+      "\n",
+      "[5 rows x 30 columns]\n",
+      "    day  timestamp                     product  bid_price_1  bid_volume_1  \\\n",
+      "3     0          0  VOLCANIC_ROCK_VOUCHER_9500       1003.0          19.0   \n",
+      "5     0        100  VOLCANIC_ROCK_VOUCHER_9500       1010.0          13.0   \n",
+      "11    0        200  VOLCANIC_ROCK_VOUCHER_9500       1013.0          15.0   \n",
+      "15    0        300  VOLCANIC_ROCK_VOUCHER_9500       1017.0          13.0   \n",
+      "20    0        400  VOLCANIC_ROCK_VOUCHER_9500       1009.0          15.0   \n",
+      "\n",
+      "    bid_price_2  bid_volume_2  bid_price_3  bid_volume_3  ask_price_1  ...  \\\n",
+      "3           NaN           NaN          NaN           NaN         1004  ...   \n",
+      "5           NaN           NaN          NaN           NaN         1011  ...   \n",
+      "11          NaN           NaN          NaN           NaN         1014  ...   \n",
+      "15          NaN           NaN          NaN           NaN         1019  ...   \n",
+      "20          NaN           NaN          NaN           NaN         1011  ...   \n",
+      "\n",
+      "    days_remaining  time_to_expiry_years  risk_free_rate  Implied_Vol  \\\n",
+      "3           7.0000              0.027778             0.0     0.228646   \n",
+      "5           6.9999              0.027777             0.0     0.229996   \n",
+      "11          6.9998              0.027777             0.0     0.230575   \n",
+      "15          6.9997              0.027777             0.0     0.231443   \n",
+      "20          6.9996              0.027776             0.0     0.229905   \n",
+      "\n",
+      "       Delta     Gamma       Vega     Theta  underlying_mid_price       m_t  \n",
+      "3   0.996010  0.000030  20.693255 -0.233330               10503.0 -0.602215  \n",
+      "5   0.996034  0.000029  20.594754 -0.233595               10510.0 -0.606217  \n",
+      "11  0.996044  0.000029  20.552855 -0.233710               10513.0 -0.607933  \n",
+      "15  0.996059  0.000029  20.490463 -0.233880               10517.5 -0.610506  \n",
+      "20  0.996032  0.000029  20.601291 -0.233586               10509.5 -0.605944  \n",
+      "\n",
+      "[5 rows x 30 columns]\n",
+      "0.1285422202633885\n"
+     ]
+    }
+   ],
+   "source": [
+    "## sort by product and calculate mean implied vol\n",
+    "print(df_analysis.head())\n",
+    "df_volcano_rock = df_analysis[df_analysis['product'] == 'VOLCANIC_ROCK_VOUCHER_9500'].copy()\n",
+    "print(df_volcano_rock.head())\n",
+    "mean_volcano_rock = df_volcano_rock['Implied_Vol'].mean()\n",
+    "print(mean_volcano_rock)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
